--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-dynamic-virtual-list",
   "version": "1.0.0",
   "description": "React virtual list component that supports elements of any size.",
-  "main": "webpack.config.js",
+  "main": "index.js",
+  "typings": "index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "rm -rf index.js index.d.ts && tsc && mv source.js index.js && mv source.d.ts index.d.ts && webpack -p"
   },
   "repository": {
     "type": "git",
@@ -17,10 +18,10 @@
   },
   "homepage": "https://github.com/ClickSimply/react-dynamic-virtual-list#readme",
   "devDependencies": {
-    "ts-loader": "^4.2.0",
+    "@types/react": "^16.3.8",
     "typescript": "^2.8.1",
     "webpack": "^4.5.0",
-    "@types/react": "^16.3.8",
+    "webpack-cli": "^2.0.14"
   },
   "peerDependencies": {
     "react": "^16.3.1"
