--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dynamic-virtual-list",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "React virtual list component that supports elements of any size.",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -13,6 +13,25 @@
   },
   "author": "",
   "license": "MIT",
+  "keywords": [
+    "react",
+    "reactjs",
+    "react-component",
+    "virtual",
+    "list",
+    "scrolling",
+    "infinite",
+    "virtualized",
+    "virtualization",
+    "windowing",
+    "table",
+    "fixed",
+    "header",
+    "flex",
+    "flexbox",
+    "grid",
+    "spreadsheet"
+  ],
   "bugs": {
     "url": "https://github.com/ClickSimply/react-dynamic-virtual-list/issues"
   },
