--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,7 @@
         "jsx": "react"
     },
     "files": [
-        "./source.tsx",
-        "./setFast.ts"
+        "./source.tsx"
     ],
     "include": []
 }
