--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-dynamic-virtual-list",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "React virtual list component that supports elements of any size.",
   "main": "index.js",
   "typings": "index.d.ts",
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@types/react": "^16.3.8",
     "typescript": "^2.8.1",
+    "uglifyjs-webpack-plugin": "^1.2.4",
     "webpack": "^4.5.0",
     "webpack-cli": "^2.0.14"
   },
